# ScrewThreadLib

./: README.md  setup.cfg
examples/: ISO_C1_figure.py  ISO_C2_C3_figure.py  length_of_engagement.py
src/screw_thread_lib/: __init__.py  threads.py
src/screw_thread_lib/data/: ASME.py  ASME_B11.py  __init__.py
